# RDWEB

./: .env.example  .gitignore  Makefile  README.md  prolog_share.md
docs/: admin-panel.md  (+9 more)
services/api/: Dockerfile  pyproject.toml
services/api/app/: celery_client.py  config.py  logging_config.py  main.py  middleware.py
services/api/app/auth/: __init__.py  dependencies.py  models.py  supabase_client.py
services/api/app/permissions/: __init__.py  audit.py  checks.py
services/api/app/routes/: __init__.py  admin.py  admin_incidents.py  admin_runs.py  admin_sources.py  admin_sse.py  blocks.py  documents.py  exports.py  me.py  ocr_sources.py  profile_routes.py  prompt_templates.py  recognition.py  workspaces.py
services/api/app/services/: dirty_detection.py  document_service.py  event_writer.py  export_service.py  prompt_resolver.py  r2_client.py  recognition_service.py  signature.py  source_registry.py
services/api/tests/: conftest.py  test_auth.py  test_health.py  test_routes_admin.py  test_routes_documents.py  test_routes_me.py  test_routes_workspaces.py
workers/ocr/: Dockerfile  pyproject.toml
workers/ocr/app/: celery_app.py  celery_signals.py  config.py  tasks.py
workers/ocr/app/infra/: __init__.py  db.py  event_writer.py  execution_lock.py  memory_utils.py  r2_uploader.py
workers/ocr/app/jobs/: __init__.py  health_probe.py  heartbeat.py  infra_probe.py  model_sync.py  retention.py
workers/ocr/app/pipeline/: __init__.py  block_recognizer.py  page_processor.py  prompt_resolver.py  route_resolver.py  signature.py  workspace.py
workers/ocr/tests/: conftest.py  test_block_recognizer.py  test_celery_config.py  test_signature.py  test_verification.py
(+101 files in other folders)
