[project]
name = "rdweb-api"
version = "0.1.0"
description = "OCR Web MVP — FastAPI backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.5.0,<3",
    "httpx>=0.27.0,<1",
    "redis>=5.0.0,<6",
    "supabase>=2.7.0,<3",
    "boto3>=1.35.0,<2",
    "celery>=5.4.0,<6",
    "python-dotenv>=1.0.0,<2",
    "PyMuPDF>=1.24.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27.0,<1",
    "mypy>=1.11,<2",
    "ruff>=0.6.0,<1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
