[project]
name = "rdweb-worker"
version = "0.1.0"
description = "OCR Web MVP — Celery OCR worker"
requires-python = ">=3.11"

dependencies = [
    "celery>=5.4.0,<6",
    "redis>=5.0.0,<6",
    "httpx>=0.27.0,<1",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.5.0,<3",
    "PyMuPDF>=1.24.0,<2",
    "Pillow>=10.4.0,<13",
    "boto3>=1.35.0,<2",
    "supabase>=2.7.0,<3",
    "psutil>=6.0.0,<7",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "mypy>=1.11,<2",
    "ruff>=0.6.0,<1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
